[tool.poetry]
name = "08-web-hw-1"
version = "0.1.0"
description = ""
authors = ["OleksiyM <oleksiym@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
